tweaking css, trying to fix mobile alignment woes

--- a/app/assets/stylesheets/photobooth.css
+++ b/app/assets/stylesheets/photobooth.css
@@ -149,6 +149,7 @@ body.night h1 {
   font-size: 14px;
   font-family: georgia, serif;
   font-style: italic;
+  padding-top:25px;
 }
 #linx a {
   color: #41d;
@@ -176,7 +177,7 @@ body.night h1 {
 }
 #score {
   font-size: 12px;
-  color: #888;
+  color: #333;
   opacity: 0.6;
 }
 #hatcount {
